<resources>
    <string name="app_name">Store Inventory</string>

    <!-- Label for overflow menu option that deletes all inventory data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Label for overflow menu option that edit the inventory data in the app [CHAR LIMIT=20] -->
    <string name="action_edit_entry">Edit</string>

    <!-- Label for overflow menu option that deletes the inventory data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_entry">Delete</string>

    <!-- Label for overflow menu option that saves the inventory data in the app [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Title text for the empty view, which describes the empty inventory image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">The shop is empty...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an item</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add an Item</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for price information per unit item in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price per Unit</string>

    <!-- Label for price information per unit item in the editor [CHAR LIMIT=30] -->
    <string name="action_sale">Sale</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>

    <!-- Text hint for description field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_desc">Item Description</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_quantity">Quantity</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Price per Unit</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="unknown_desc">Unknown Description</string>

    <!-- Dialog message to ask the user to confirm deleting all the items [CHAR LIMIT=NONE] -->
    <string name="deleteall_dialog_msg">Delete all the Items?</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this Item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">Item saved</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Toast message in editor when new item has been successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when new item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating item</string>

    <!-- Toast message in editor when item has been successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Toast message in editor when item has been successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_allitems_successful">All the Items deleted</string>

    <!-- Toast message in editor when item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_allitems_failed">Error with deleting all the items</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog button text for the option to order more of the current item [CHAR LIMIT=20] -->
    <string name="order_more">Order More</string>

    <!-- Quantity details label in Catalog Activity -->
    <string name="quantity_label">Quantities available is </string>

    <!-- Sale Button Text -->
    <string name="sale_button_text">Sale</string>

    <!-- Not Sufficient Item for sale Text -->
    <string name="not_sufficient_sale_item">Sufficient Item not present for Sale</string>

    <!-- Email Intent Title -->
    <string name="mail_chooser_title">Send Email</string>

    <!-- Order More Email Recipient -->
    <string name="order_mail_recipient">emailaddress@emailaddress.com</string>

    <!-- Order More Email Subject -->
    <string name="order_mail_subject">Need Items to Order</string>

    <!-- Order More Email Body -->
    <string name="order_mail_body">Hello,
        \n \n
        Please help to place a new order for the following item
        \n \n
        Item Details
        \n
    </string>

    <!-- DB Details-->
    <string name="db_name">inventory.db</string>
    <string name="table_name">items</string>
    <string name="content_authority">com.example.android.storeinventory</string>
    <string name="slash">/</string>
    <string name="column_item_name">name</string>
    <string name="column_item_desc">desc</string>
    <string name="column_item_quantity">quantity</string>
    <string name="column_item_price">price</string>


    <!-- Toast Messages for validations -->
    <string name="mandatory_name_toast_message">Item Name is required</string>
    <string name="invalid_quantity_toast_message">Enter correct quantity</string>
    <string name="invalid_price_toast_message">Enter correct price</string>

</resources>
